--- a/retrOStartpage.html
+++ b/retrOStartpage.html
@@ -3,13 +3,22 @@
 <head>
     <title>Desktop</title>
     <style>
-        body {
-            background-image: url(Wallpapers/winXP.jpeg);
-            background-size: cover;
-            background-repeat: no-repeat;
+        @font-face {
+            font-family: 'IBM EGA';
+            src: url('font/Web437_IBM_EGA_8x14.woff') format('woff');
         }
 
-        .desktop-column {
+        body {
+            background-image: url(Wallpapers/retrowave.png);
+            background-color: black;
+            background-size: cover;
+            background-repeat: no-repeat;
+            font-family: 'IBM EGA', monospace;
+            font-size: 14px;
+            line-height: 1;
+        }
+
+        .desktop-row {
             display: flex;
             flex-wrap: nowrap;
             height: 100%;
@@ -20,15 +29,17 @@
             width: 100%;
             height: 100px;
             margin-bottom: 20px;
+            margin-right: 20px;
+            position: relative;
         }
 
         .icon {
             width: 100%;
             height: 48px;
             border: none;
+            border-color: gray;
             text-decoration: none;
-            color: black;
-            font-weight: bold;
+            color: white;
         }
 
         .name {
@@ -38,14 +49,30 @@
             inline-size: 80px;
             overflow-wrap: break-word;
             overflow: hidden;
-            background-color: rgb(126, 126, 199);
+            background-color: rgb(161, 112, 224);
         }
 
         .desktop-element:hover {
             .name {
-                outline: 2px;
+                outline: 1px;
                 outline-style: dashed;
             }
+        }
+
+        .folder:hover .folder-content{
+            display: block;
+        }
+
+        .folder-content {
+            display: none;
+            position: absolute;
+            background-color: lightgray;
+            color: black;
+            min-width: 100px;
+            width: 200px;
+            left: 100%;
+            top: 0;
+            z-index: 1;
         }
 
         img {
@@ -56,32 +83,67 @@
     </style>
 </head>
 
-    <body>
-        <div class="desktop-column" id="c1">
+<body>
+    <div class="desktop-row" id="r1">
         <div class="desktop-element">
             <a href="https://retroachievements.org" class="icon">
-                <img src="Icons - Win98SE/SE98/apps/48/fceux.png">
+                <img src="Win98SE/SE98/apps/48/fceux.png">
                 <p class="name">RetroAchievements</p>
             </a>
         </div>
+        <div class="desktop-element">
+            <a href="https://www.youtube.com/playlist?list=PLYJBniXbg4HL2RQJyzGBosvgYGwoH3x0g" class="icon">
+                <img src="Win98SE/SE98/apps/48/rip.png">
+                <p class="name">Instrumental Music</p>
+            </a>
         </div>
+    </div>
     
-        <div class="desktop-column" id="c2">
+    <div class="desktop-row" id="r2">
         <div class="desktop-element">
             <a href="https://old.reddit.com" class="icon">
-                <img src="Icons - Win98SE/SE98/apps/48/preferences-desktop-locale.png">
+                <img src="Win98SE/SE98/apps/48/preferences-desktop-locale.png">
                 <p class="name">Reddit</p>
             </a>
         </div>
+        <div class="desktop-element folder">
+            <a href="" class="icon">
+                <img src="Win98SE/SE98/categories/48/stock_internet.png">
+                <p class="name">Wikipedia Articles</p>
+                <div class="folder-content">
+                    <a href="https://en.wikipedia.org/wiki/Internet_protocol_suite">Internet Protocol Suite</a><br><br>
+                    <a href="#">something else</a><br>
+                    <a href="#"></a>
+                </div>
+            </a>
         </div>
+    </div>
 
-        <div class="desktop-column" id="c3">
-            <div class="desktop-element">
-                <a href="https://mail.google.com" class="icon">
-                    <img src="Icons - Win98SE/SE98/apps/48/thunderbird.png">
-                    <p class="name">e-mail</p>
-                </a>
-            </div>
+    <div class="desktop-row" id="r3">
+        <div class="desktop-element">
+            <a href="https://vimm.net" class="icon">
+                <img src="Win98SE/SE98/mimes/48/application-x-gamecube-rom.png">
+                <p class="name">ROMs</p>
+            </a>
         </div>
-    </body>
+     </div>
+
+    <div class="desktop-row" id="r4">
+        <div class="desktop-element">
+            <a href="https://mail.google.com" class="icon">
+                <img src="Win98SE/SE98/apps/48/thunderbird.png">
+                <p class="name">E-mail</p>
+            </a>
+        </div>
+    </div>
+
+    <div class="desktop-row" id="r5">
+        <div class="desktop-element">
+            <a href="https://vimm.net" class="icon">
+                <img src="Win98SE/SE98/mimes/48/application-x-gamecube-rom.png">
+                <p class="name">ROMs</p>
+            </a>
+        </div>
+    </div>
+</body>
 </html>
